--- a/src/index.css
+++ b/src/index.css
@@ -14,8 +14,14 @@ code {
 .items-grid {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-  grid-gap: 20px;
+  grid-gap: 40px;
   margin-top: 50px;
+}
+
+@media (max-width: 600px) {
+  .items-grid {
+    grid-template-columns: 1fr;
+  }
 }
 
 .item {
@@ -28,6 +34,10 @@ code {
 
 .item img {
   width: 100%;
-  height: 100%;
+  height: auto;
   object-fit: cover;
+}
+
+.item-text {
+  color: black; 
 }
