fix: a possible fix for the logo size on mobile screen

--- a/src/App.css
+++ b/src/App.css
@@ -7,11 +7,12 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
+@media (max-width: 600px) {
   .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+    height: 60vmin;
   }
 }
+
 
 .App-header {
   background-color: #88909f;
