update: background color

--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
 }
 
 .App-header {
-  background-color: #88909f;
+  background-color: #070707;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
